Remove deprecated module directive in Java 17