@@ -100,12 +100,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <!-- workaround for: https://issues.jboss.org/browse/UNDERTOW-1355 -->
-                <configuration>
-                    <argLine>
-                        --illegal-access=deny
-                    </argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
